# fatcat-utils

./: .gitignore  README.md  pyproject.toml
fatcat_utils/: __init__.py  fatcat.py  plugin.py
fatcat_utils/logger/: __init__.py  elastic_config.py  formatter.py  mylogger.py
fatcat_utils/mongodb/: __init__.py  config.py  database_handler.py  exceptions.py  interfaces.py
fatcat_utils/rabbitmq/: __init__.py  base_rabbit.py  config.py  consumer.py  enums.py  exceptions.py  group.py  publisher.py
fatcat_utils/schema_validator/: __init__.py  schema_checker.py
tests/: test_logger.py  test_mongodb.py  test_rabbitmq.py  test_schema_checker.py
