[tool.poetry]
name = "fatcat_utils"
version = "0.1.0"
description = ""
authors = ["Yotamefr <yotamefr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aio-pika = "^9.2.1"
motor = "^3.2.0"
elasticsearch-logging-handler = {git = "https://github.com/Yotamefr/python-elasticsearch-logging"}
typing-extensions = "^4.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
